# llp-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  celerybeat-schedule  docker-compose.yml  llp-chat.html  pyproject.toml  requirements.txt
apps/accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/audit/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py
apps/billing/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/chat/: admin.py  anthropic_provider.py  citations.py  intent.py  kimi_provider.py  models.py  pipeline.py  prompts.py  router.py  serializers.py  tasks.py  urls.py  views.py
apps/common/: exceptions.py  logging.py  middleware.py  models.py  urls.py  views.py
apps/documents/: admin.py  embeddings.py  ingestion.py  ingestion_docx.py  models.py  retrieval.py  serializers.py  tasks.py  urls.py  views.py
apps/subscriptions/: admin.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docs/: API.md  DEPLOYMENT_AWS.md  DEPLOY_FRONTEND.md  RUNBOOK.md
infra/nginx/: llp.conf
infra/scripts/: entrypoint.sh
infra/terraform/: alb.tf  data.tf  ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  secrets.tf  variables.tf
labour_docs/: Bangladesh_Labour_Act__2006_-_OCR.docx  Bangladesh_Labour_Rules__2015_-_OCR.docx  Bangladesh_Labour_Rules__Amendment___2022_-_OCR.docx  Bangladesh_Labour__Amendment__Act__2009_-_OCR.docx  Bangladesh_Labour__Amendment__Act__2010_-_OCR.docx  Bangladesh_Labour__Amendment__Act__2013___Authentic_English_Translation__-_OCR.docx  Bangladesh_Labour__Amendment__Act__2018_-_OCR.docx  Bangladesh_Labour__Amendment__Act__2026_-_OCR.docx  Bangladesh_Labour__Amendment__Ordinance__2025_-_OCR.docx
tests/: conftest.py  test_audit.py  test_citations.py  test_prompts.py  test_smoke.py  test_subscriptions.py
(+9 files in other folders)
